# CARB-Scraper

./: .env.example  DEMO.md  DEV_NOTES.md  PLAN.md  README.md  To-Do  pyproject.toml
data/: carb.db
src/api/: main.py  routes.py
src/api/static/: index.html
src/chatbot/: classifier.py  graph_queries.py  llm.py
src/crawler/: browser.py  crawler.py  extractor.py
src/db/: database.py  schema.py
